--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 crispy-bootstrap4==2024.1
 Django==5.1.1
 django-crispy-forms==2.3
+django-datatables-view==1.20.0
 django-environ==0.11.2
 django-humanize==0.1.2
 django-widget-tweaks==1.5.0
