--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,7 @@ django-widget-tweaks==1.5.0
 humanize==4.10.0
 pillow==10.4.0
 PyMySQL==1.1.1
+python-dateutil==2.9.0.post0
+six==1.16.0
 sqlparse==0.5.1
 typing_extensions==4.12.2
