--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-crispy-forms==2.3
 django-datatables-view==1.20.0
 django-environ==0.11.2
 django-humanize==0.1.2
+django-quill-editor==0.1.42
 django-widget-tweaks==1.5.0
 humanize==4.10.0
 pillow==10.4.0
